# hololive_OCG_helper

./: .gitattributes  .gitignore  AGENTS.md  README.md  main.py  pyproject.toml  requirements.txt
android/kotlin/: .gitignore  README.md  settings.gradle.kts
android/kotlin/app/: build.gradle.kts
android/kotlin/app/src/main/: AndroidManifest.xml
app/: app_icon.icns  constants.py  main.py  paths.py  pyproject.toml  requirements.txt  ui.py
app/services/: db.py  images.py  pipeline.py  verify.py
config/: namuwiki_pages.txt  tag_ja_to_ko.txt
data/: README.md  ko_input.csv
docs/: altstore_testing.md  changes_kr.md  index.html  privacy-policy.html
mobile/: README.md
mobile/android/: README.md
mobile/android/native/: README.md
mobile/android/native-app/: .gitignore  README.md  settings.gradle.kts
mobile/android/native-app/app/: build.gradle.kts
mobile/ios/: README.md
mobile/ios/native/: README.md
mobile/ios/native-app/: README.md  project.yml
mobile/ios/native-app/HocgNative.xcodeproj/: project.pbxproj
mobile/ios/native-app/scripts/: build_sideload.sh  build_testflight.sh
mobile/ios/native/Sources/HocgNative/: AppPaths.swift  ContentView.swift  Models.swift  (+7 more)
scripts/: build_desktop.py  pack.bat  pack.ps1  pack.sh  run.ps1
tools/: export_ko_all_template.py  export_ko_tags_template.py  export_ko_template.py  hocg_refine_update.py  hocg_tool2.py  import_ko_all_from_csv.py  import_ko_from_csv.py  import_ko_tags.py  migrate_tags_split.py  namu_sync.py  namuwiki_ko_bulk_import.py  namuwiki_ko_common.py  namuwiki_ko_import.py  namuwiki_ko_scrape.py
(+16 files in other folders)
